# strongforth

./: .gitignore  Dockerfile.server  LICENSE  README.md
docker/: README.md
forth/: core.zf  sfsmall.zf  strongforth.zf  strongforth_static.zf
lib/: .gitignore
lib/atmega8/: device.c  device.h  strongforth_conf.h
lib/core/: Makefile  base32.c  base32.h  common.c  common.h  strongforth.c  strongforth.h  strongforth_conf.h  test  test.c  zforth.c  zforth.h
lib/core/python/: stfmodule.h
lib/linux/: Makefile  device.c  strongforth_conf.h  test.c
lib/linux-python/: .gitignore  Makefile  device.c  dict.h  poster.py  strongforth_conf.h  whitelist.h
lib/linux-python/python/: python_conf.c  stfmodule.c
mplab-projects/libstf.X/nbproject/: configurations.xml  project.xml
mplab-projects/stf-atmega4809.X/: AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start_config.atstart  hal_avr8_i2c.c  hal_avr8_timer.c  main.c
mplab-projects/stf-atmega4809.X/gcc/: Makefile
python/: test.py
server/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  dict.h  main.go  server.c  server.h  strongforth_conf.h  test.c
src/linux/: Makefile  base32.c  main.c  strongforth.c
src/linux-sflib/: Makefile  strongforth.c  strongforth.h  test  test.c
src/linux-sim/: Makefile  hydrogen.h  main.c  uECC.c  zfconf.h
src/linux-sim-python/: Makefile  base32.c  sfmodule.c  sfmodule.h  sys.c  sys.h  uECC.h  zfconf.h
src/linux-sim/impl/: secretbox.h
src/zforth/: zforth.c  zforth.h
test/: .gitignore  printdict.py
test/python/: README.md  tester.py
test/web-ble/: index.html  main.js
(+33 files in other folders)
